--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 services:
   resume-matcher:
-      image : resume-matcher
-      build:
-        context: ./
-        dockerfile : build.dockerfile
-      ports:
-        - 80:8501
+    image : resume-matcher
+    build:
+      context: ./
+      dockerfile : build.dockerfile
+    ports:
+        - 8501:8501
+    restart: unless-stopped
